test cleanup - reorg to subtype specific tests; use nested parse vs factory test classes